--- a/Readiculous.WebApp/Views/Dashboard/DashboardScreen.cshtml
+++ b/Readiculous.WebApp/Views/Dashboard/DashboardScreen.cshtml
@@ -1,4 +1,4 @@
-﻿@model Readiculous.WebApp.Models.DashboardViewModel
+﻿@model Readiculous.Services.ServiceModels.DashboardViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
