--- a/Readiculous.WebApp/Views/Shared/_RegisterPartial.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_RegisterPartial.cshtml
@@ -8,8 +8,10 @@
             <input type="email" id="registerEmail" class="form-control" asp-for="Email" placeholder="Email Address" autocomplete="off" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <button class="btn login-btn" type="submit">Sign Up</button>
-        <div class="forgot-signup-row">
+        <div style="display: flex; justify-content: center;">
+            <button class="btn login-btn" type="submit">Sign Up</button>
+        </div>
+        <div style="display: flex; justify-content: center; margin-top: 1.2rem;">
             <a href="#" class="login-link" id="show-login">Back to Login</a>
         </div>
     </form>
