--- a/Readiculous.WebApp/Views/Shared/_OtpPartial.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_OtpPartial.cshtml
@@ -12,9 +12,11 @@
         </div>
         <input type="hidden" asp-for="Email" />
         <input type="hidden" asp-for="Otp" id="OtpHidden" />
-        <button class="btn login-btn" type="submit">Continue</button>
-        <div class="forgot-signup-row">
-            <a href="#" class="login-link" id="show-login">Back to Login</a>
+        <div style="display: flex; justify-content: center;">
+            <button class="btn login-btn" type="submit">Continue</button>
+        </div>
+        <div style="display: flex; justify-content: center; margin-top: 1.2rem;">
+            <a href="/" class="login-link" id="show-login">Back to Login</a>
         </div>
     </form>
 </div> 
