--- a/Readiculous.WebApp/Views/Shared/_ResetPasswordPartial.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_ResetPasswordPartial.cshtml
@@ -14,9 +14,11 @@
             <input type="password" id="confirmPassword" class="form-control" asp-for="ConfirmPassword" placeholder="Confirm new password" required minlength="8" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
-        <button class="btn login-btn" type="submit">Continue</button>
-        <div class="forgot-signup-row">
-            <a href="#" class="login-link" id="show-login">Back to Login</a>
+        <div style="display: flex; justify-content: center;">
+            <button class="btn login-btn" type="submit">Continue</button>
+        </div>
+        <div style="display: flex; justify-content: center; margin-top: 1.2rem;">
+            <a href="/" class="login-link" id="show-login">Back to Login</a>
         </div>
     </form>
 </div> 
