--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -44,15 +44,12 @@
         </div>
     </div>
 
-    <div class="pagination-controls row mb-4 mx-0 align-items-center">
-        <div class="col-md-6 px-0 pagination-container">
+    <div class="row justify-content-center">
+        <div class="col-md-6 px-0 text-md-end">
             @if (ViewBag.PaginationModel != null)
             {
                 @await Component.InvokeAsync("Pagination", ViewBag.PaginationModel)
             }
-        </div>
-        <div class="col-md-6 px-0 text-md-end page-size-container">
-            @await Component.InvokeAsync("PageSize", new { currentPageSize = ViewBag.PageSize ?? 10 })
         </div>
     </div>
 </div>
