[FIX] scroll bar bug

--- a/Readiculous.WebApp/Views/UserMaster/_UserListPartial.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/_UserListPartial.cshtml
@@ -7,7 +7,7 @@
             <th rowspan="2" class="text-center align-middle">@Html.DisplayNameFor(model => model.First().UserName)</th>
             <th rowspan="2" class="text-center align-middle">@Html.DisplayNameFor(model => model.First().Email)</th>
             <th rowspan="2" class="text-center align-middle">@Html.DisplayNameFor(model => model.First().Role)</th>
-            <th colspan="2" class="text-center align-middle">Modified</th>
+            <th colspan="2" class="text-center align-middle">Updated</th>
             <th rowspan="2" class="text-center align-middle">Actions</th>
         </tr>
         <tr class="text-center">
