--- a/Readiculous.WebApp/Views/BookMaster/_BookListPartial.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/_BookListPartial.cshtml
@@ -9,7 +9,7 @@
             <th rowspan="2" class="text-center align-middle">Genres</th>
             <th rowspan="2" class="text-center align-middle">Series#</th>
             <th rowspan="2" class="text-center align-middle">Rating</th>
-            <th colspan="2" class="text-center align-middle">Modified</th>
+            <th colspan="2" class="text-center align-middle">Updated</th>
             <th rowspan="2" class="text-center align-middle">Actions</th>
         </tr>
         <tr class="text-center">
