--- a/Readiculous.WebApp/Views/GenreMaster/_GenreListPartial.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/_GenreListPartial.cshtml
@@ -6,7 +6,7 @@
             <th rowspan="2" class="text-center align-middle">@Html.DisplayNameFor(model => model.First().Name)</th>
             <th rowspan="2" class="text-center align-middle">@Html.DisplayNameFor(model => model.First().Description)</th>
             <th rowspan="2" class="text-center align-middle">@Html.DisplayNameFor(model => model.First().BookCount)</th>
-            <th colspan="2" class="text-center align-middle">Modified</th>
+            <th colspan="2" class="text-center align-middle">Updated</th>
             <th rowspan="2" class="text-center align-middle">Actions</th>
         </tr>
         <tr class="text-center">
